- add endpoints for logs, and listing users
